<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icons8_home_48"
        android:title="@string/Home"
        />
    <item
        android:id="@+id/badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icons8_badge_48"
        android:title="@string/Badge" />
    <item
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icons8_rank_48"
        android:title="@string/Rank" />
    <item
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icons8_customer_48"
        android:title="@string/Profile"
        android:tint="@null"/>

</menu>