<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignupActivity">
    <!--margintop是100-->
    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/agbalumo"
        android:text="SignUp"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/signupEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/email"
        android:textSize="40sp"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/signupText"
        app:layout_constraintBottom_toTopOf="@+id/signupPassword"
        android:autofillHints="" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupPassword"
        android:hint="@string/sixnumber"
        android:textSize="40sp"
        android:inputType="textPassword"
        android:padding="18dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupButton"
        android:text="@string/signup"
        android:textSize="40sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:text="@string/already_registered_login"
        android:textSize="45sp"
        android:gravity="center"
        android:textColor="@color/pink"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        android:clickable="true"
        android:focusable="true" />




</androidx.constraintlayout.widget.ConstraintLayout>